--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,3 +92,18 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+dependencies:
+  flutter:
+    sdk: flutter
+  cupertino_icons: ^1.0.6
+  flutter_mobx: ^2.0.4
+  mobx: ^2.0.6+1
+  dio: ^4.0.6 # Adicione esta linha com a versão atual do Dio
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+  flutter_lints: ^3.0.0
+  mobx_codegen: ^2.0.1+3
+  build_runner: ^2.0.5
+  dio_http2_adapter: ^2.0.0 # Adicione esta linha se você precisa do HTTP/2 ou do badCertificateCallback
