--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   mobx: ^2.0.6+1
   dio: ^4.0.6
   flutter_secure_storage: ^8.0.0
+  gauge_indicator: ^0.4.3
 
 dev_dependencies:
   flutter_test:
